manifests/sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
spec:
  selector:
    app: sample
  ports:
    - port: 80
      targetPort: 80
