manifests/sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample
spec:
  ingressClassName: traefik
  rules:
    - host: sample.192.168.64.10.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample
                port:
                  number: 80
